# tello_diagnosis

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  README.md  READY_FOR_GITHUB.md  docker-compose.yml  install.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Docs/: Manual.md  PROJECT_SUMMARY.md
src/tello_diagnostics/: __init__.py  diagnostics.py  flight_programs.py  logger.py  manual.py  py.typed
tests/: __init__.py  conftest.py  test_diagnostics.py  test_flight_programs.py  test_logger.py  test_manual.py
