[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tello-diagnostics"
version = "1.0.0"
description = "Comprehensive diagnostic toolkit for DJI Tello drones"
readme = "README.md"
authors = [
    {name = "Diego L. Malpica", email = "dlmalpica@me.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
keywords = ["dji", "tello", "drone", "diagnostics", "telemetry", "robotics"]
dependencies = [
    "djitellopy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.1",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "bandit[toml]>=1.7.5",
    "pre-commit>=3.4.0",
]

[project.scripts]
tello-diagnostics = "tello_diagnostics.diagnostics:main"
tello-logger = "tello_diagnostics.logger:main"
tello-manual = "tello_diagnostics.manual:main"

[project.urls]
Homepage = "https://github.com/strikerdlm/tello-diagnostics"
Documentation = "https://github.com/strikerdlm/tello-diagnostics#readme"
Repository = "https://github.com/strikerdlm/tello-diagnostics"
Issues = "https://github.com/strikerdlm/tello-diagnostics/issues"
Changelog = "https://github.com/strikerdlm/tello-diagnostics/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tello_diagnostics = ["py.typed"]

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================
[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy-specific
    "PERF",   # perflint
    "RUF",    # ruff-specific
]

ignore = [
    "D203",    # one-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "FIX002",  # line-contains-todo
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # use of assert
    "ANN001",  # missing-type-function-argument
    "ANN201",  # missing-return-type-public-function
    "ARG001",  # unused-function-argument
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-type-checking]
strict = true

# ============================================================================
# BLACK CONFIGURATION
# ============================================================================
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# ============================================================================
# ISORT CONFIGURATION
# ============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ============================================================================
# MYPY CONFIGURATION
# ============================================================================
[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "djitellopy.*"
ignore_missing_imports = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/tello_diagnostics",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
timeout = 10
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["src/tello_diagnostics"]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT CONFIGURATION
# ============================================================================
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "build", "dist"]
skips = []

